src/core/pbrtparse.output
Terminals unused in grammar

   ID


Grammar

    0 $accept: start $end

    1 start: pbrt_stmt_list

    2 array_init: /* empty */

    3 string_array_init: /* empty */

    4 num_array_init: /* empty */

    5 array: string_array
    6      | num_array

    7 string_array: array_init LBRACK string_list RBRACK
    8             | single_element_string_array

    9 single_element_string_array: array_init string_list_entry

   10 string_list: string_list string_list_entry
   11            | string_list_entry

   12 string_list_entry: string_array_init STRING

   13 num_array: array_init LBRACK num_list RBRACK
   14          | single_element_num_array

   15 single_element_num_array: array_init num_list_entry

   16 num_list: num_list num_list_entry
   17         | num_list_entry

   18 num_list_entry: num_array_init NUM

   19 paramlist: paramlist_init paramlist_contents

   20 paramlist_init: /* empty */

   21 paramlist_contents: paramlist_entry paramlist_contents
   22                   | /* empty */

   23 paramlist_entry: STRING array

   24 pbrt_stmt_list: pbrt_stmt_list pbrt_stmt
   25               | pbrt_stmt

   26 pbrt_stmt: ACCELERATOR STRING paramlist
   27          | ACTIVETRANSFORM ALL
   28          | ACTIVETRANSFORM ENDTIME
   29          | ACTIVETRANSFORM STARTTIME
   30          | AREALIGHTSOURCE STRING paramlist
   31          | ATTRIBUTEBEGIN
   32          | ATTRIBUTEEND
   33          | CAMERA STRING paramlist
   34          | CONCATTRANSFORM num_array
   35          | COORDINATESYSTEM STRING
   36          | COORDSYSTRANSFORM STRING
   37          | FILM STRING paramlist
   38          | IDENTITY
   39          | INCLUDE STRING
   40          | LIGHTSOURCE STRING paramlist
   41          | LOOKAT NUM NUM NUM NUM NUM NUM NUM NUM NUM
   42          | MAKENAMEDMATERIAL STRING paramlist
   43          | MATERIAL STRING paramlist
   44          | NAMEDMATERIAL STRING
   45          | OBJECTBEGIN STRING
   46          | OBJECTEND
   47          | OBJECTINSTANCE STRING
   48          | PIXELFILTER STRING paramlist
   49          | RENDERER STRING paramlist
   50          | REVERSEORIENTATION
   51          | ROTATE NUM NUM NUM NUM
   52          | SAMPLER STRING paramlist
   53          | SCALE NUM NUM NUM
   54          | SHAPE STRING paramlist
   55          | SURFACEINTEGRATOR STRING paramlist
   56          | TEXTURE STRING STRING STRING paramlist
   57          | TRANSFORMBEGIN
   58          | TRANSFORMEND
   59          | TRANSFORMTIMES NUM NUM
   60          | TRANSFORM num_array
   61          | TRANSLATE NUM NUM NUM
   62          | VOLUMEINTEGRATOR STRING paramlist
   63          | VOLUME STRING paramlist
   64          | WORLDBEGIN
   65          | WORLDEND


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING (258) 12 23 26 30 33 35 36 37 39 40 42 43 44 45 47 48 49 52
    54 55 56 62 63
ID (259)
NUM (260) 18 41 51 53 59 61
LBRACK (261) 7 13
RBRACK (262) 7 13
ACCELERATOR (263) 26
ACTIVETRANSFORM (264) 27 28 29
ALL (265) 27
AREALIGHTSOURCE (266) 30
ATTRIBUTEBEGIN (267) 31
ATTRIBUTEEND (268) 32
CAMERA (269) 33
CONCATTRANSFORM (270) 34
COORDINATESYSTEM (271) 35
COORDSYSTRANSFORM (272) 36
ENDTIME (273) 28
FILM (274) 37
IDENTITY (275) 38
INCLUDE (276) 39
LIGHTSOURCE (277) 40
LOOKAT (278) 41
MAKENAMEDMATERIAL (279) 42
MATERIAL (280) 43
NAMEDMATERIAL (281) 44
OBJECTBEGIN (282) 45
OBJECTEND (283) 46
OBJECTINSTANCE (284) 47
PIXELFILTER (285) 48
RENDERER (286) 49
REVERSEORIENTATION (287) 50
ROTATE (288) 51
SAMPLER (289) 52
SCALE (290) 53
SHAPE (291) 54
STARTTIME (292) 29
SURFACEINTEGRATOR (293) 55
TEXTURE (294) 56
TRANSFORMBEGIN (295) 57
TRANSFORMEND (296) 58
TRANSFORMTIMES (297) 59
TRANSFORM (298) 60
TRANSLATE (299) 61
VOLUME (300) 63
VOLUMEINTEGRATOR (301) 62
WORLDBEGIN (302) 64
WORLDEND (303) 65
HIGH_PRECEDENCE (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
start (51)
    on left: 1, on right: 0
array_init (52)
    on left: 2, on right: 7 9 13 15
string_array_init (53)
    on left: 3, on right: 12
num_array_init (54)
    on left: 4, on right: 18
array (55)
    on left: 5 6, on right: 23
string_array (56)
    on left: 7 8, on right: 5
single_element_string_array (57)
    on left: 9, on right: 8
string_list (58)
    on left: 10 11, on right: 7 10
string_list_entry (59)
    on left: 12, on right: 9 10 11
num_array (60)
    on left: 13 14, on right: 6 34 60
single_element_num_array (61)
    on left: 15, on right: 14
num_list (62)
    on left: 16 17, on right: 13 16
num_list_entry (63)
    on left: 18, on right: 15 16 17
paramlist (64)
    on left: 19, on right: 26 30 33 37 40 42 43 48 49 52 54 55 56 62
    63
paramlist_init (65)
    on left: 20, on right: 19
paramlist_contents (66)
    on left: 21 22, on right: 19 21
paramlist_entry (67)
    on left: 23, on right: 21
pbrt_stmt_list (68)
    on left: 24 25, on right: 1 24
pbrt_stmt (69)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65, on right: 24 25


state 0

    0 $accept: . start $end

    ACCELERATOR         shift, and go to state 1
    ACTIVETRANSFORM     shift, and go to state 2
    AREALIGHTSOURCE     shift, and go to state 3
    ATTRIBUTEBEGIN      shift, and go to state 4
    ATTRIBUTEEND        shift, and go to state 5
    CAMERA              shift, and go to state 6
    CONCATTRANSFORM     shift, and go to state 7
    COORDINATESYSTEM    shift, and go to state 8
    COORDSYSTRANSFORM   shift, and go to state 9
    FILM                shift, and go to state 10
    IDENTITY            shift, and go to state 11
    INCLUDE             shift, and go to state 12
    LIGHTSOURCE         shift, and go to state 13
    LOOKAT              shift, and go to state 14
    MAKENAMEDMATERIAL   shift, and go to state 15
    MATERIAL            shift, and go to state 16
    NAMEDMATERIAL       shift, and go to state 17
    OBJECTBEGIN         shift, and go to state 18
    OBJECTEND           shift, and go to state 19
    OBJECTINSTANCE      shift, and go to state 20
    PIXELFILTER         shift, and go to state 21
    RENDERER            shift, and go to state 22
    REVERSEORIENTATION  shift, and go to state 23
    ROTATE              shift, and go to state 24
    SAMPLER             shift, and go to state 25
    SCALE               shift, and go to state 26
    SHAPE               shift, and go to state 27
    SURFACEINTEGRATOR   shift, and go to state 28
    TEXTURE             shift, and go to state 29
    TRANSFORMBEGIN      shift, and go to state 30
    TRANSFORMEND        shift, and go to state 31
    TRANSFORMTIMES      shift, and go to state 32
    TRANSFORM           shift, and go to state 33
    TRANSLATE           shift, and go to state 34
    VOLUME              shift, and go to state 35
    VOLUMEINTEGRATOR    shift, and go to state 36
    WORLDBEGIN          shift, and go to state 37
    WORLDEND            shift, and go to state 38

    start           go to state 39
    pbrt_stmt_list  go to state 40
    pbrt_stmt       go to state 41


state 1

   26 pbrt_stmt: ACCELERATOR . STRING paramlist

    STRING  shift, and go to state 42


state 2

   27 pbrt_stmt: ACTIVETRANSFORM . ALL
   28          | ACTIVETRANSFORM . ENDTIME
   29          | ACTIVETRANSFORM . STARTTIME

    ALL        shift, and go to state 43
    ENDTIME    shift, and go to state 44
    STARTTIME  shift, and go to state 45


state 3

   30 pbrt_stmt: AREALIGHTSOURCE . STRING paramlist

    STRING  shift, and go to state 46


state 4

   31 pbrt_stmt: ATTRIBUTEBEGIN .

    $default  reduce using rule 31 (pbrt_stmt)


state 5

   32 pbrt_stmt: ATTRIBUTEEND .

    $default  reduce using rule 32 (pbrt_stmt)


state 6

   33 pbrt_stmt: CAMERA . STRING paramlist

    STRING  shift, and go to state 47


state 7

   34 pbrt_stmt: CONCATTRANSFORM . num_array

    $default  reduce using rule 2 (array_init)

    array_init                go to state 48
    num_array                 go to state 49
    single_element_num_array  go to state 50


state 8

   35 pbrt_stmt: COORDINATESYSTEM . STRING

    STRING  shift, and go to state 51


state 9

   36 pbrt_stmt: COORDSYSTRANSFORM . STRING

    STRING  shift, and go to state 52


state 10

   37 pbrt_stmt: FILM . STRING paramlist

    STRING  shift, and go to state 53


state 11

   38 pbrt_stmt: IDENTITY .

    $default  reduce using rule 38 (pbrt_stmt)


state 12

   39 pbrt_stmt: INCLUDE . STRING

    STRING  shift, and go to state 54


state 13

   40 pbrt_stmt: LIGHTSOURCE . STRING paramlist

    STRING  shift, and go to state 55


state 14

   41 pbrt_stmt: LOOKAT . NUM NUM NUM NUM NUM NUM NUM NUM NUM

    NUM  shift, and go to state 56


state 15

   42 pbrt_stmt: MAKENAMEDMATERIAL . STRING paramlist

    STRING  shift, and go to state 57


state 16

   43 pbrt_stmt: MATERIAL . STRING paramlist

    STRING  shift, and go to state 58


state 17

   44 pbrt_stmt: NAMEDMATERIAL . STRING

    STRING  shift, and go to state 59


state 18

   45 pbrt_stmt: OBJECTBEGIN . STRING

    STRING  shift, and go to state 60


state 19

   46 pbrt_stmt: OBJECTEND .

    $default  reduce using rule 46 (pbrt_stmt)


state 20

   47 pbrt_stmt: OBJECTINSTANCE . STRING

    STRING  shift, and go to state 61


state 21

   48 pbrt_stmt: PIXELFILTER . STRING paramlist

    STRING  shift, and go to state 62


state 22

   49 pbrt_stmt: RENDERER . STRING paramlist

    STRING  shift, and go to state 63


state 23

   50 pbrt_stmt: REVERSEORIENTATION .

    $default  reduce using rule 50 (pbrt_stmt)


state 24

   51 pbrt_stmt: ROTATE . NUM NUM NUM NUM

    NUM  shift, and go to state 64


state 25

   52 pbrt_stmt: SAMPLER . STRING paramlist

    STRING  shift, and go to state 65


state 26

   53 pbrt_stmt: SCALE . NUM NUM NUM

    NUM  shift, and go to state 66


state 27

   54 pbrt_stmt: SHAPE . STRING paramlist

    STRING  shift, and go to state 67


state 28

   55 pbrt_stmt: SURFACEINTEGRATOR . STRING paramlist

    STRING  shift, and go to state 68


state 29

   56 pbrt_stmt: TEXTURE . STRING STRING STRING paramlist

    STRING  shift, and go to state 69


state 30

   57 pbrt_stmt: TRANSFORMBEGIN .

    $default  reduce using rule 57 (pbrt_stmt)


state 31

   58 pbrt_stmt: TRANSFORMEND .

    $default  reduce using rule 58 (pbrt_stmt)


state 32

   59 pbrt_stmt: TRANSFORMTIMES . NUM NUM

    NUM  shift, and go to state 70


state 33

   60 pbrt_stmt: TRANSFORM . num_array

    $default  reduce using rule 2 (array_init)

    array_init                go to state 48
    num_array                 go to state 71
    single_element_num_array  go to state 50


state 34

   61 pbrt_stmt: TRANSLATE . NUM NUM NUM

    NUM  shift, and go to state 72


state 35

   63 pbrt_stmt: VOLUME . STRING paramlist

    STRING  shift, and go to state 73


state 36

   62 pbrt_stmt: VOLUMEINTEGRATOR . STRING paramlist

    STRING  shift, and go to state 74


state 37

   64 pbrt_stmt: WORLDBEGIN .

    $default  reduce using rule 64 (pbrt_stmt)


state 38

   65 pbrt_stmt: WORLDEND .

    $default  reduce using rule 65 (pbrt_stmt)


state 39

    0 $accept: start . $end

    $end  shift, and go to state 75


state 40

    1 start: pbrt_stmt_list .
   24 pbrt_stmt_list: pbrt_stmt_list . pbrt_stmt

    ACCELERATOR         shift, and go to state 1
    ACTIVETRANSFORM     shift, and go to state 2
    AREALIGHTSOURCE     shift, and go to state 3
    ATTRIBUTEBEGIN      shift, and go to state 4
    ATTRIBUTEEND        shift, and go to state 5
    CAMERA              shift, and go to state 6
    CONCATTRANSFORM     shift, and go to state 7
    COORDINATESYSTEM    shift, and go to state 8
    COORDSYSTRANSFORM   shift, and go to state 9
    FILM                shift, and go to state 10
    IDENTITY            shift, and go to state 11
    INCLUDE             shift, and go to state 12
    LIGHTSOURCE         shift, and go to state 13
    LOOKAT              shift, and go to state 14
    MAKENAMEDMATERIAL   shift, and go to state 15
    MATERIAL            shift, and go to state 16
    NAMEDMATERIAL       shift, and go to state 17
    OBJECTBEGIN         shift, and go to state 18
    OBJECTEND           shift, and go to state 19
    OBJECTINSTANCE      shift, and go to state 20
    PIXELFILTER         shift, and go to state 21
    RENDERER            shift, and go to state 22
    REVERSEORIENTATION  shift, and go to state 23
    ROTATE              shift, and go to state 24
    SAMPLER             shift, and go to state 25
    SCALE               shift, and go to state 26
    SHAPE               shift, and go to state 27
    SURFACEINTEGRATOR   shift, and go to state 28
    TEXTURE             shift, and go to state 29
    TRANSFORMBEGIN      shift, and go to state 30
    TRANSFORMEND        shift, and go to state 31
    TRANSFORMTIMES      shift, and go to state 32
    TRANSFORM           shift, and go to state 33
    TRANSLATE           shift, and go to state 34
    VOLUME              shift, and go to state 35
    VOLUMEINTEGRATOR    shift, and go to state 36
    WORLDBEGIN          shift, and go to state 37
    WORLDEND            shift, and go to state 38

    $default  reduce using rule 1 (start)

    pbrt_stmt  go to state 76


state 41

   25 pbrt_stmt_list: pbrt_stmt .

    $default  reduce using rule 25 (pbrt_stmt_list)


state 42

   26 pbrt_stmt: ACCELERATOR STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 77
    paramlist_init  go to state 78


state 43

   27 pbrt_stmt: ACTIVETRANSFORM ALL .

    $default  reduce using rule 27 (pbrt_stmt)


state 44

   28 pbrt_stmt: ACTIVETRANSFORM ENDTIME .

    $default  reduce using rule 28 (pbrt_stmt)


state 45

   29 pbrt_stmt: ACTIVETRANSFORM STARTTIME .

    $default  reduce using rule 29 (pbrt_stmt)


state 46

   30 pbrt_stmt: AREALIGHTSOURCE STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 79
    paramlist_init  go to state 78


state 47

   33 pbrt_stmt: CAMERA STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 80
    paramlist_init  go to state 78


state 48

   13 num_array: array_init . LBRACK num_list RBRACK
   15 single_element_num_array: array_init . num_list_entry

    LBRACK  shift, and go to state 81

    $default  reduce using rule 4 (num_array_init)

    num_array_init  go to state 82
    num_list_entry  go to state 83


state 49

   34 pbrt_stmt: CONCATTRANSFORM num_array .

    $default  reduce using rule 34 (pbrt_stmt)


state 50

   14 num_array: single_element_num_array .

    $default  reduce using rule 14 (num_array)


state 51

   35 pbrt_stmt: COORDINATESYSTEM STRING .

    $default  reduce using rule 35 (pbrt_stmt)


state 52

   36 pbrt_stmt: COORDSYSTRANSFORM STRING .

    $default  reduce using rule 36 (pbrt_stmt)


state 53

   37 pbrt_stmt: FILM STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 84
    paramlist_init  go to state 78


state 54

   39 pbrt_stmt: INCLUDE STRING .

    $default  reduce using rule 39 (pbrt_stmt)


state 55

   40 pbrt_stmt: LIGHTSOURCE STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 85
    paramlist_init  go to state 78


state 56

   41 pbrt_stmt: LOOKAT NUM . NUM NUM NUM NUM NUM NUM NUM NUM

    NUM  shift, and go to state 86


state 57

   42 pbrt_stmt: MAKENAMEDMATERIAL STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 87
    paramlist_init  go to state 78


state 58

   43 pbrt_stmt: MATERIAL STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 88
    paramlist_init  go to state 78


state 59

   44 pbrt_stmt: NAMEDMATERIAL STRING .

    $default  reduce using rule 44 (pbrt_stmt)


state 60

   45 pbrt_stmt: OBJECTBEGIN STRING .

    $default  reduce using rule 45 (pbrt_stmt)


state 61

   47 pbrt_stmt: OBJECTINSTANCE STRING .

    $default  reduce using rule 47 (pbrt_stmt)


state 62

   48 pbrt_stmt: PIXELFILTER STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 89
    paramlist_init  go to state 78


state 63

   49 pbrt_stmt: RENDERER STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 90
    paramlist_init  go to state 78


state 64

   51 pbrt_stmt: ROTATE NUM . NUM NUM NUM

    NUM  shift, and go to state 91


state 65

   52 pbrt_stmt: SAMPLER STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 92
    paramlist_init  go to state 78


state 66

   53 pbrt_stmt: SCALE NUM . NUM NUM

    NUM  shift, and go to state 93


state 67

   54 pbrt_stmt: SHAPE STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 94
    paramlist_init  go to state 78


state 68

   55 pbrt_stmt: SURFACEINTEGRATOR STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 95
    paramlist_init  go to state 78


state 69

   56 pbrt_stmt: TEXTURE STRING . STRING STRING paramlist

    STRING  shift, and go to state 96


state 70

   59 pbrt_stmt: TRANSFORMTIMES NUM . NUM

    NUM  shift, and go to state 97


state 71

   60 pbrt_stmt: TRANSFORM num_array .

    $default  reduce using rule 60 (pbrt_stmt)


state 72

   61 pbrt_stmt: TRANSLATE NUM . NUM NUM

    NUM  shift, and go to state 98


state 73

   63 pbrt_stmt: VOLUME STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 99
    paramlist_init  go to state 78


state 74

   62 pbrt_stmt: VOLUMEINTEGRATOR STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 100
    paramlist_init  go to state 78


state 75

    0 $accept: start $end .

    $default  accept


state 76

   24 pbrt_stmt_list: pbrt_stmt_list pbrt_stmt .

    $default  reduce using rule 24 (pbrt_stmt_list)


state 77

   26 pbrt_stmt: ACCELERATOR STRING paramlist .

    $default  reduce using rule 26 (pbrt_stmt)


state 78

   19 paramlist: paramlist_init . paramlist_contents

    STRING  shift, and go to state 101

    $default  reduce using rule 22 (paramlist_contents)

    paramlist_contents  go to state 102
    paramlist_entry     go to state 103


state 79

   30 pbrt_stmt: AREALIGHTSOURCE STRING paramlist .

    $default  reduce using rule 30 (pbrt_stmt)


state 80

   33 pbrt_stmt: CAMERA STRING paramlist .

    $default  reduce using rule 33 (pbrt_stmt)


state 81

   13 num_array: array_init LBRACK . num_list RBRACK

    $default  reduce using rule 4 (num_array_init)

    num_array_init  go to state 82
    num_list        go to state 104
    num_list_entry  go to state 105


state 82

   18 num_list_entry: num_array_init . NUM

    NUM  shift, and go to state 106


state 83

   15 single_element_num_array: array_init num_list_entry .

    $default  reduce using rule 15 (single_element_num_array)


state 84

   37 pbrt_stmt: FILM STRING paramlist .

    $default  reduce using rule 37 (pbrt_stmt)


state 85

   40 pbrt_stmt: LIGHTSOURCE STRING paramlist .

    $default  reduce using rule 40 (pbrt_stmt)


state 86

   41 pbrt_stmt: LOOKAT NUM NUM . NUM NUM NUM NUM NUM NUM NUM

    NUM  shift, and go to state 107


state 87

   42 pbrt_stmt: MAKENAMEDMATERIAL STRING paramlist .

    $default  reduce using rule 42 (pbrt_stmt)


state 88

   43 pbrt_stmt: MATERIAL STRING paramlist .

    $default  reduce using rule 43 (pbrt_stmt)


state 89

   48 pbrt_stmt: PIXELFILTER STRING paramlist .

    $default  reduce using rule 48 (pbrt_stmt)


state 90

   49 pbrt_stmt: RENDERER STRING paramlist .

    $default  reduce using rule 49 (pbrt_stmt)


state 91

   51 pbrt_stmt: ROTATE NUM NUM . NUM NUM

    NUM  shift, and go to state 108


state 92

   52 pbrt_stmt: SAMPLER STRING paramlist .

    $default  reduce using rule 52 (pbrt_stmt)


state 93

   53 pbrt_stmt: SCALE NUM NUM . NUM

    NUM  shift, and go to state 109


state 94

   54 pbrt_stmt: SHAPE STRING paramlist .

    $default  reduce using rule 54 (pbrt_stmt)


state 95

   55 pbrt_stmt: SURFACEINTEGRATOR STRING paramlist .

    $default  reduce using rule 55 (pbrt_stmt)


state 96

   56 pbrt_stmt: TEXTURE STRING STRING . STRING paramlist

    STRING  shift, and go to state 110


state 97

   59 pbrt_stmt: TRANSFORMTIMES NUM NUM .

    $default  reduce using rule 59 (pbrt_stmt)


state 98

   61 pbrt_stmt: TRANSLATE NUM NUM . NUM

    NUM  shift, and go to state 111


state 99

   63 pbrt_stmt: VOLUME STRING paramlist .

    $default  reduce using rule 63 (pbrt_stmt)


state 100

   62 pbrt_stmt: VOLUMEINTEGRATOR STRING paramlist .

    $default  reduce using rule 62 (pbrt_stmt)


state 101

   23 paramlist_entry: STRING . array

    $default  reduce using rule 2 (array_init)

    array_init                   go to state 112
    array                        go to state 113
    string_array                 go to state 114
    single_element_string_array  go to state 115
    num_array                    go to state 116
    single_element_num_array     go to state 50


state 102

   19 paramlist: paramlist_init paramlist_contents .

    $default  reduce using rule 19 (paramlist)


state 103

   21 paramlist_contents: paramlist_entry . paramlist_contents

    STRING  shift, and go to state 101

    $default  reduce using rule 22 (paramlist_contents)

    paramlist_contents  go to state 117
    paramlist_entry     go to state 103


state 104

   13 num_array: array_init LBRACK num_list . RBRACK
   16 num_list: num_list . num_list_entry

    RBRACK  shift, and go to state 118

    $default  reduce using rule 4 (num_array_init)

    num_array_init  go to state 82
    num_list_entry  go to state 119


state 105

   17 num_list: num_list_entry .

    $default  reduce using rule 17 (num_list)


state 106

   18 num_list_entry: num_array_init NUM .

    $default  reduce using rule 18 (num_list_entry)


state 107

   41 pbrt_stmt: LOOKAT NUM NUM NUM . NUM NUM NUM NUM NUM NUM

    NUM  shift, and go to state 120


state 108

   51 pbrt_stmt: ROTATE NUM NUM NUM . NUM

    NUM  shift, and go to state 121


state 109

   53 pbrt_stmt: SCALE NUM NUM NUM .

    $default  reduce using rule 53 (pbrt_stmt)


state 110

   56 pbrt_stmt: TEXTURE STRING STRING STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 122
    paramlist_init  go to state 78


state 111

   61 pbrt_stmt: TRANSLATE NUM NUM NUM .

    $default  reduce using rule 61 (pbrt_stmt)


state 112

    7 string_array: array_init . LBRACK string_list RBRACK
    9 single_element_string_array: array_init . string_list_entry
   13 num_array: array_init . LBRACK num_list RBRACK
   15 single_element_num_array: array_init . num_list_entry

    LBRACK  shift, and go to state 123

    NUM       reduce using rule 4 (num_array_init)
    $default  reduce using rule 3 (string_array_init)

    string_array_init  go to state 124
    num_array_init     go to state 82
    string_list_entry  go to state 125
    num_list_entry     go to state 83


state 113

   23 paramlist_entry: STRING array .

    $default  reduce using rule 23 (paramlist_entry)


state 114

    5 array: string_array .

    $default  reduce using rule 5 (array)


state 115

    8 string_array: single_element_string_array .

    $default  reduce using rule 8 (string_array)


state 116

    6 array: num_array .

    $default  reduce using rule 6 (array)


state 117

   21 paramlist_contents: paramlist_entry paramlist_contents .

    $default  reduce using rule 21 (paramlist_contents)


state 118

   13 num_array: array_init LBRACK num_list RBRACK .

    $default  reduce using rule 13 (num_array)


state 119

   16 num_list: num_list num_list_entry .

    $default  reduce using rule 16 (num_list)


state 120

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM . NUM NUM NUM NUM NUM

    NUM  shift, and go to state 126


state 121

   51 pbrt_stmt: ROTATE NUM NUM NUM NUM .

    $default  reduce using rule 51 (pbrt_stmt)


state 122

   56 pbrt_stmt: TEXTURE STRING STRING STRING paramlist .

    $default  reduce using rule 56 (pbrt_stmt)


state 123

    7 string_array: array_init LBRACK . string_list RBRACK
   13 num_array: array_init LBRACK . num_list RBRACK

    NUM       reduce using rule 4 (num_array_init)
    $default  reduce using rule 3 (string_array_init)

    string_array_init  go to state 124
    num_array_init     go to state 82
    string_list        go to state 127
    string_list_entry  go to state 128
    num_list           go to state 104
    num_list_entry     go to state 105


state 124

   12 string_list_entry: string_array_init . STRING

    STRING  shift, and go to state 129


state 125

    9 single_element_string_array: array_init string_list_entry .

    $default  reduce using rule 9 (single_element_string_array)


state 126

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM NUM . NUM NUM NUM NUM

    NUM  shift, and go to state 130


state 127

    7 string_array: array_init LBRACK string_list . RBRACK
   10 string_list: string_list . string_list_entry

    RBRACK  shift, and go to state 131

    $default  reduce using rule 3 (string_array_init)

    string_array_init  go to state 124
    string_list_entry  go to state 132


state 128

   11 string_list: string_list_entry .

    $default  reduce using rule 11 (string_list)


state 129

   12 string_list_entry: string_array_init STRING .

    $default  reduce using rule 12 (string_list_entry)


state 130

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM NUM NUM . NUM NUM NUM

    NUM  shift, and go to state 133


state 131

    7 string_array: array_init LBRACK string_list RBRACK .

    $default  reduce using rule 7 (string_array)


state 132

   10 string_list: string_list string_list_entry .

    $default  reduce using rule 10 (string_list)


state 133

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM NUM NUM NUM . NUM NUM

    NUM  shift, and go to state 134


state 134

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM NUM NUM NUM NUM . NUM

    NUM  shift, and go to state 135


state 135

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM NUM NUM NUM NUM NUM .

    $default  reduce using rule 41 (pbrt_stmt)
